@@ -150,6 +150,7 @@ __ZN7WebCore11FrameLoader4loadERKNS_16FrameLoadRequestE
 __ZN7WebCore11FrameLoader6reloadEb
 __ZN7WebCore11FrameLoader9setOpenerEPNS_5FrameE
 __ZN7WebCore11HistoryItem10targetItemEv
+__ZN7WebCore11HistoryItem11setFormDataEN3WTF10PassRefPtrINS_8FormDataEEE
 __ZN7WebCore11HistoryItem11setReferrerERKN3WTF6StringE
 __ZN7WebCore11HistoryItem12addChildItemEN3WTF10PassRefPtrIS0_EE
 __ZN7WebCore11HistoryItem12setURLStringERKN3WTF6StringE
@@ -193,6 +194,7 @@ __ZN7WebCore11memoryCacheEv
 __ZN7WebCore11startOfLineERKNS_15VisiblePositionE
 __ZN7WebCore11startOfWordERKNS_15VisiblePositionENS_9EWordSideE
 __ZN7WebCore11writeToFileEiPKci
+__ZN7WebCore12BlobDataItem11toEndOfFileE
 __ZN7WebCore12BlobRegistryD2Ev
 __ZN7WebCore12DataTransferD1Ev
 __ZN7WebCore12EditingStyleD1Ev
@@ -594,6 +596,10 @@ __ZN7WebCore15GraphicsLayerCA7setSizeERKNS_9FloatSizeE
 __ZN7WebCore15GraphicsLayerCA8addChildEPNS_13GraphicsLayerE
 __ZN7WebCore15GraphicsLayerCAC2ERNS_19GraphicsLayerClientE
 __ZN7WebCore15GraphicsLayerCAD2Ev
+__ZN7WebCore11HistoryItem14setStateObjectEN3WTF10PassRefPtrINS_21SerializedScriptValueEEE
+__ZN7WebCore11HistoryItem18setFormContentTypeERKN3WTF6StringE
+__ZN7WebCore11HistoryItem18setPageScaleFactorEf
+__ZN7WebCore11HistoryItem9setTargetERKN3WTF6StringE
 __ZN7WebCore15HitTestLocation12rectForPointERKNS_11LayoutPointEjjjj
 __ZN7WebCore15HitTestLocationC1ERKNS_10FloatPointE
 __ZN7WebCore15HitTestLocationD1Ev
@@ -1293,6 +1299,10 @@ __ZN7WebCore8Document27removeMediaCanStartListenerEPNS_21MediaCanStartListenerE
 __ZN7WebCore8Document36updateLayoutIgnorePendingStylesheetsENS0_18RunPostLayoutTasksE
 __ZN7WebCore8Document4headEv
 __ZN7WebCore8Document8iconURLsEi
+__ZN7WebCore8FormData10appendBlobERKNS_3URLE
+__ZN7WebCore8FormData10appendDataEPKvm
+__ZN7WebCore8FormData15appendFileRangeERKN3WTF6StringExxdb
+__ZN7WebCore8FormData6createEv
 __ZN7WebCore8FormData6createEPKvm
 __ZN7WebCore8FormData6decodeERN3WTF7DecoderE
 __ZN7WebCore8FormDataD1Ev
